# genesis-sync-accelerator

./: .gitignore  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  cabal.project  flake.nix  genesis-sync-accelerator.cabal
.github/workflows/: integration-test.yml  nix-required.yml
app/: Main.hs
chunk-uploader/: README.md  chunk-uploader.cabal
chunk-uploader/app/: Main.hs
chunk-uploader/src/: ChunkUploader.hs
chunk-uploader/src/ChunkUploader/: Detection.hs  S3.hs  State.hs  Types.hs
doc/: design.md  using-an-accelerator.md
nix/: ci.nix  formatting-linting.nix  haskell.nix  shell.nix  tools.nix
scripts/ci/: run-cabal-gild.sh  run-fourmolu.sh
src/GenesisSyncAccelerator/: Config.hs  Diffusion.hs  MiniProtocols.hs  OnDemand.hs  Parsers.hs  RemoteStorage.hs  Tracing.hs  Types.hs  Util.hs
src/gsa-testlib/Test/GenesisSyncAccelerator/: Orphans.hs  Types.hs  Utilities.hs
test/: lib.sh
test/Test/GenesisSyncAccelerator/: Storage.hs
test/cdn/: lib.sh  run-test.sh
test/config/Test/GenesisSyncAccelerator/: Config.hs
test/data/: config.json  tip.json
test/download/: Main.hs
test/download/Test/GenesisSyncAccelerator/: Download.hs
test/download/Test/GenesisSyncAccelerator/Download/: Chunks.hs  RemoteTip.hs  Retry.hs
test/integration/: .gitignore  README.md  chain-init.sh  lib.sh  run-test.sh
test/integration/config/: config.json  consumer-topology.json  topology.json
test/on-demand/: Main.hs
test/on-demand/Test/GenesisSyncAccelerator/: OnDemandRuntime.hs
test/on-demand/Test/GenesisSyncAccelerator/OnDemand/: EnsureChunks.hs  Iteration.hs  Runtime.hs
test/storage/: Main.hs
test/storage/Test/GenesisSyncAccelerator/: Storage.hs
