cabal-version: 3.4
name: genesis-sync-accelerator
version: 0.1.0.0
license: Apache-2.0
author: Modus Create, LLC.
maintainer: erin.vanderveen@tweag.io
build-type: Simple

common common-all
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wunused-packages

  build-depends:
    base

common common-test
  build-depends:
    QuickCheck,
    quickcheck-instances,
    tasty,
    tasty-quickcheck,

executable genesis-sync-accelerator
  import: common-all
  main-is: Main.hs
  hs-source-dirs:
    app
    src

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I0 -A16m"

  other-modules:
    GenesisSyncAccelerator.Diffusion
    GenesisSyncAccelerator.MiniProtocols
    GenesisSyncAccelerator.OnDemand
    GenesisSyncAccelerator.Parsers
    GenesisSyncAccelerator.RemoteStorage
    GenesisSyncAccelerator.Tracing
    GenesisSyncAccelerator.Types

  build-depends:
    async,
    bytestring,
    cardano-crypto-class,
    cborg,
    containers,
    contra-tracer,
    directory,
    filepath,
    fs-api,
    http-client,
    http-client-tls,
    http-types,
    io-classes,
    network,
    network-mux,
    optparse-applicative,
    ouroboros-consensus,
    ouroboros-consensus-cardano:unstable-cardano-tools,
    ouroboros-consensus-diffusion,
    ouroboros-network,
    ouroboros-network-api,
    ouroboros-network-framework,
    ouroboros-network-protocols,
    resource-registry,
    text,
    trace-dispatcher,
    trace-resources,
    with-utf8,

library
  import: common-all
  hs-source-dirs: src
  exposed-modules:
    GenesisSyncAccelerator.OnDemand
    GenesisSyncAccelerator.RemoteStorage

  other-modules:
    GenesisSyncAccelerator.Diffusion
    GenesisSyncAccelerator.MiniProtocols
    GenesisSyncAccelerator.Parsers
    GenesisSyncAccelerator.Tracing
    GenesisSyncAccelerator.Types

  build-depends:
    async,
    bytestring,
    cborg,
    containers,
    contra-tracer,
    directory,
    filepath,
    fs-api,
    http-client,
    http-client-tls,
    http-types,
    io-classes,
    network,
    network-mux,
    ouroboros-consensus,
    ouroboros-consensus-diffusion,
    ouroboros-network,
    ouroboros-network-api,
    ouroboros-network-framework,
    ouroboros-network-protocols,
    resource-registry,
    text,
    trace-dispatcher,
    trace-resources,

library gsa-testlib
  import: common-all
  hs-source-dirs: src/gsa-testlib
  exposed-modules:
    Test.GenesisSyncAccelerator.Orphans
    Test.GenesisSyncAccelerator.Utilities

  build-depends:
    QuickCheck,
    genesis-sync-accelerator,
    ouroboros-consensus,
    text,

test-suite storage-tests
  import: common-all, common-test
  main-is: Main.hs
  hs-source-dirs: test/storage
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -rtsopts

  build-depends:
    directory,
    filepath,
    fs-api,
    genesis-sync-accelerator,
    genesis-sync-accelerator:gsa-testlib,
    ouroboros-consensus,
    temporary,
    text,

  other-modules:
    Test.GenesisSyncAccelerator.Storage

test-suite download-tests
  import: common-all, common-test
  main-is: Main.hs
  hs-source-dirs: test/download
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -rtsopts

  build-depends:
    containers,
    contra-tracer,
    directory,
    filepath,
    genesis-sync-accelerator,
    genesis-sync-accelerator:gsa-testlib,
    ouroboros-consensus,
    temporary,
    text,
    wai-app-static,
    warp,

  other-modules:
    Test.GenesisSyncAccelerator.Download
